# voice_transcriber

./: .cursorrules.md  .gitignore  README.md  noxfile.py  pyproject.toml
docs/voice_transcriber/: chunk.md  index.md  main.md  transcribe.md
notebooks/: 101.ipynb
src/voice_transcriber/: chunk.py  main.py  transcribe.py
tests/: test_chunk.py  test_main.py  test_transcribe.py
